gave test.js a better name added icon

--- a/README
+++ b/README
@@ -3,3 +3,6 @@ tokens from URL query strings.
 
 Based on the work of Jon Parise:
 https://github.com/jparise/chrome-utm-stripper
+
+Urchin logo by Jordan Irwin / Deluge
+http://www.openclipart.org/detail/69997
