--- a/README
+++ b/README
@@ -9,3 +9,6 @@ https://github.com/jparise/chrome-utm-stripper
 
 Urchin logo by Jordan Irwin / Deluge
 http://www.openclipart.org/detail/69997
+
+Bookmarklet version available here, created by @kid1ng (for use on mobile devices):
+https://gist.github.com/kiding/589242021df49eb17be3/
